--- a/gtk/sass/3.22/_common.scss
+++ b/gtk/sass/3.22/_common.scss
@@ -3670,7 +3670,8 @@ switch {
 @each $w,$a in ('check', 'checkbox'),
                ('radio','radio') {
 
-  // standard checks and radios
+  // workaround for WebKitGtk
+  // FIXME: always use light variant check/radio in WebKit
   @each $s,$as in ('','-unchecked'),
                   (':hover', '-unchecked-active'),
                   (':active', '-unchecked-active'),
@@ -3684,6 +3685,26 @@ switch {
                   (':checked:active', '-checked-active'),
                   (':checked:disabled','-checked-insensitive') {
     #{$w}#{$s} {
+      -gtk-icon-source: -gtk-scaled(url("assets/#{$a}#{$as}.png"),
+                                    url("assets/#{$a}#{$as}@2.png"));
+      -gtk-icon-shadow: none;
+    }
+  }
+
+  // standard checks and radios
+  @each $s,$as in ('','-unchecked'),
+                  (':hover', '-unchecked-active'),
+                  (':active', '-unchecked-active'),
+                  (':disabled','-unchecked-insensitive'),
+                  (':indeterminate', '-mixed'),
+                  (':indeterminate:hover', '-mixed-active'),
+                  (':indeterminate:active', '-mixed-active'),
+                  (':indeterminate:disabled', '-mixed-insensitive'),
+                  (':checked', '-checked'),
+                  (':checked:hover', '-checked-active'),
+                  (':checked:active', '-checked-active'),
+                  (':checked:disabled','-checked-insensitive') {
+    .background #{$w}#{$s} {
       -gtk-icon-source: -gtk-scaled(url("assets/#{$a}#{$as}#{$asset_suffix}.png"),
                                     url("assets/#{$a}#{$as}#{$asset_suffix}@2.png"));
       -gtk-icon-shadow: none;
